# social-media-web3-solana

./: .env  next.config.js  package-lock.json  package.json
components/: Comment.js  CommentSection.js  Contact.js  CookieBanner.jsx  CreateComment.js  CreateMediaPost.js  CreatePost.js  Feed.js  GoogleAnalystics.jsx  Header.js  LeftSidebar.js  Post.js  RightSidebar.js  SignUp.js  UploadModel.js
context/: WalletConnectionProvider.js  useWalletBalance.js
hooks/: useWeb3.js
pages/: _app.js  index.js
pages/api/: createUser.js  fetchUsers.js
studio/: package-lock.json  package.json  postcss.config.js  sanity.cli.js  sanity.config.js
studio/schemas/: index.js
utils/: const.js  facebook_clone.json  get-program.js  web3_solana.json
web3-solana/: Anchor.toml  package-lock.json
web3-solana/C/Users/rober/.config/solana/: id.json
web3-solana/programs/web3-solana/: Cargo.toml
web3-solana/programs/web3-solana/src/: lib.rs
web3-solana/tests/: web3-solana.ts
