[package]
name = "web3-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "web3_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/project-serum/anchor", tag = "v0.21.0" }
anchor-spl = { git = "https://github.com/project-serum/anchor", tag = "v0.21.0" }
